# frc1885-2013

./: .gitignore  .gitmodules  CMakeLists.txt  CopyToFlashDrive.launch  Default.theme  README  TODO  bin2text.rb  build.xml  config.xml  copyToFlashDriveUltimateAscent.bat  eclipse_prefs.epf  modules.xml  protocol-spec.txt  readme.md
2014DriverDT/: MyRobot.cpp
Code2012/: bhs_Autonomous.h  bhs_AutonomousBasicWithBridge.cpp  bhs_AutonomousBasicWithBridge.h  bhs_AxisCamera.cpp  bhs_AxisCamera.h  bhs_AxisCamera2.cpp  bhs_AxisCamera2.h  bhs_AxisCameraParams2.cpp  bhs_AxisCameraParams2.h  bhs_BridgeLowering.cpp  bhs_BridgeLowering.h  bhs_ButtonImpulse.cpp  bhs_ButtonImpulse.h  bhs_CANJaguar.cpp  bhs_CANJaguar.h  bhs_CameraData.cpp  bhs_CameraData.h  bhs_Constants.cpp  bhs_Constants.h  bhs_Conveyor.cpp  bhs_Conveyor.h  bhs_Diagnostics.cpp  bhs_Diagnostics.h  bhs_DriveAngle.cpp  bhs_DriveAngle.h  bhs_DriveAngle2.cpp  bhs_DriveAngle2.h  bhs_DriveTrain.cpp  bhs_DriveTrain.h  bhs_EncoderPID.cpp  bhs_EncoderPID.h  bhs_GDBridgeData.cpp  bhs_GDBridgeData.h  bhs_GDConveyorData.cpp  bhs_GDConveyorData.h  bhs_GDDriveData.cpp  bhs_GDDriveData.h  bhs_GDShooterData.cpp  bhs_GDShooterData.h  bhs_GDTransmitData.cpp  (+26 more)
Code2013/: CMakeLists.txt  Constants.h  GlobalData.cpp  GlobalData.h  Input.cpp  Input.h  Main.cpp  Main.h  NetDriver.cpp  NetDriver.h  NetVision.cpp  NetVision.h  Output.cpp  Output.h  PID.cpp  PID.h  Processing.cpp  Processing.h  SpeedBuffer.cpp  SpeedBuffer.h  TimedBoolean.cpp  TimedBoolean.h  Trapezoidal.cpp  Trapezoidal.h  bhs_Autonomous.cpp  bhs_Autonomous.h  bhs_CAM.cpp  bhs_CAM.h  bhs_Hang.cpp  bhs_Hang.h  bhs_Hopper.cpp  bhs_Hopper.h  bhs_Launcher.cpp  bhs_Launcher.h  bhs_SSD.cpp  bhs_SSD.h  bhs_Spatula.cpp  bhs_Spatula.h  binarychunkreader.cpp  binarychunkreader.h  (+15 more)
CodeBase/: bhs_Autonomous.cpp  bhs_Autonomous.h  bhs_ButtonImpulse.cpp  bhs_ButtonImpulse.h  bhs_Constants.h  bhs_DriveAngle.cpp  bhs_DriveAngle.h  bhs_DriverInput.cpp  bhs_DriverInput.h  bhs_Drivetrain.cpp  bhs_Drivetrain.h  bhs_GDDrivetrain.cpp  bhs_GDDrivetrain.h  bhs_GDSubsys1.cpp  bhs_GDSubsys1.h  bhs_GDSubsys2.cpp  bhs_GDSubsys2.h  bhs_GDSubsys3.cpp  bhs_GDSubsys3.h  bhs_GlobalData.cpp  bhs_GlobalData.h  bhs_Input.h  bhs_Nudge.cpp  bhs_Nudge.h  bhs_OutputManager.cpp  bhs_OutputManager.h  bhs_Robot.cpp  bhs_Robot.h  bhs_SensorInput.cpp  bhs_SensorInput.h  bhs_Subsys1.cpp  bhs_Subsys1.h  bhs_Subsys2.cpp  bhs_Subsys2.h  bhs_Subsys3.cpp  bhs_Subsys3.h  bhs_Subsystem.h
common/: BlobDetector.cpp  BlobDetector.h  CMakeLists.txt  Communicator.cpp  Communicator.h  CoordinateTransform.cpp  CoordinateTransform.h  HsvFilter.cpp  HsvFilter.h  InputUtils.cpp  InputUtils.h  KinectMotor.cpp  KinectMotor.h  KinectSubscriber.cpp  KinectSubscriber.h  KinectWrapper.cpp  KinectWrapper.h  SocketUtils.cpp  SocketUtils.h  TimeUtils.cpp  TimeUtils.h
cpp/: binarychunkwriter.cpp  binaryencoding-inl.h  chunk.h  chunkreader.cpp  chunkrwfactory.cpp  chunkrwfactory.h  chunktransmission.cpp  chunktransmission.h  chunkwriter-inl.h  chunkwriter.h  common.h  haxx.h  neterror.cpp  neterror.h  nettypes.cpp  nettypes.h  rwcommon-inl.h  rwcommon.h  textchunkreader.cpp  textchunkwriter.cpp
cpp/net-test/: main.cpp
cpp/tests/: binencodingtests.cpp  binencodingtests.h  binrwtests.cpp  binrwtests.h  chunktransmissiontests.cpp  chunktransmissiontests.h  factorytests.cpp  factorytests.h  testcommon.h  (+8 more)
images/: readme.txt
resources/: kinect.config
scripts/: game  instances  kill  restart  run  run-always  set-date  ultimate-ascent.conf  watch-log
test/: AnglesTest.cpp  InputTest.cpp  SocketTest.cpp  TcpClientTest.cpp  TcpServerTest.cpp  TimeTest.cpp
tools/: BasicKinectBlobs.cpp  CMakeLists.txt  KinectMotor.cpp  KinectMotor.py  KinectServer.cpp  OpenNiCapture.cpp  TcpCameraClient.cpp
ultimateAscent/: CMakeLists.txt  UltimateAscent.cpp
(+362 files in other folders)
